# data_clusterer

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yml
src/: app.py
src/data_clusterer/: algorithms.py  container.py  file_export.py  file_import.py
src/tests/: conftest.py  test_algorithms.py  test_containter.py  test_file_export.py  test_file_import.py
